--- a/backup/code.ipynb
+++ b/backup/code.ipynb
@@ -307,6 +307,20 @@
     "stds = grid_result.cv_results_['std_test_score']\n",
     "params = grid_result.cv_results_['params']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = model.fit(\n",
+    "\t\t\t\t\t\taug.flow(trainX, trainY, batch_size=BS),\n",
+    "\t\t\t\t\t\tsteps_per_epoch=len(trainX) // BS,\n",
+    "\t\t\t\t\t\tvalidation_data=(testX, testY),\n",
+    "\t\t\t\t\t\tvalidation_steps=len(testX) // BS,\n",
+    "\t\t\t\t\t\tepochs=EPOCHS)"
+   ]
   }
  ],
  "metadata": {
